# msm-os

./: .gitignore  .pre-commit-config.yaml  LICENCE.md  README.md  pyproject.toml  requirements.txt  zarr_integrity.md
examples/: eorca025_era5.yaml  intake_example.ipynb  jasmin_os_msm.yaml  n06_dataset_example.ipynb  recipe.md  send_batch.sh  transfer_to_os.py
src/msm_os/: __init__.py  exceptions.py  object_store.py  object_store_handler.py  sanity_cheks.py
src/msm_os/cli/: __init__.py  argument_parser.py  main_cli.py
