[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msm_os"
description = "A library to send files to the object store."
requires-python = ">=3.10"
keywords = ["data", "pipeline", "object store", "tookit", "data", "zarr", "pypeline", "noc"]
authors = [{email = "joao.morado@noc.ac.uk"},{name = "Joao Morado"}]
maintainers = [{name = "Joao Morado", email = "joao.morado@noc.ac.uk"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research"
]
dependencies = [
  "cf-units>=3.2.0",
  "dask[complete]>=2023.3.0",
  "xarray[io,accel,viz]>=2023.3.0",
  "s3fs>=2023.3.0",
  "fsspec>=2023.3.0",
  "numpy>=1.23.5",
  "scitools-iris>=3.9.0",
  ]

dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
file = "LICENSE.md"
content-type = "text/markdown"

[tool.setuptools.dynamic]
version = {attr = "msm_os.__init__.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["*__pycache__*"]
namespaces = true

[project.optional-dependencies]
test = ["pytest >= 7.2.0"]

[project.urls]
repository = "https://github.com/NOC-OI/msm_os"

[project.scripts]
msm_os = "msm_os.cli.main_cli:msm_os"
